main button manage the two thread

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
             android:id="@+id/buttonStartAll"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="stopThread"
+            android:onClick="startAllThread"
             android:text="Start All"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
